# zint-wasi

./: .gitignore  .gitmodules  Cargo.toml  README.md  about.toml  build.sh
.github/workflows/: ci.yml
assets/: updating-preview.md
typst-package/: README.md  example.typ  lib.typ  manual.typ  tidy_style.typ  typst.toml
xtask/: Cargo.toml  README.md  build.rs  state
xtask/src/: action.rs  action_impl.rs  action_macros.rs  actions.rs  arguments.rs  log.rs  main.rs  state.rs  tools.rs  util.rs
xtask/src/action/: impl.rs  macro.rs  mod.rs
xtask/src/state/: configure.rs  global.rs  mod.rs  refs.rs
xtask/src/tools/: error.rs  macro.rs  mod.rs  name.rs
zint-typst-plugin/: Cargo.toml
zint-typst-plugin/src/: lib.rs
zint-wasm-rs/: Cargo.toml
zint-wasm-rs/examples/: code128.rs  ean13.rs  ena13.rs
zint-wasm-rs/src/: error.rs  lib.rs  symbol.rs
zint-wasm-rs/src/options/: capability.rs  color.rs  error.rs  input_mode.rs  mod.rs  option3.rs  output_options.rs  symbology.rs
zint-wasm-sys/: Cargo.toml  README.md  build.rs  wrapper.h
zint-wasm-sys/examples/: code128.rs
zint-wasm-sys/extension/: sds.c  svg.c  svg.h
zint-wasm-sys/patch/: patch.c
zint-wasm-sys/src/: lib.rs
