[workspace]
package.edition = "2021"
resolver = "2"
members = [
    "zint-wasm-sys",
    "zint-wasm-rs",
    "zint-typst-plugin"
]

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
