[workspace]
package.edition = "2021"
package.license = "MIT"
resolver = "2"
members = [
    "zint-wasm-sys",
    "zint-wasm-rs",
    "zint-typst-plugin",
    "zint-typst-plugin/vendor/wasm-minimal-protocol/crates/macro",
    "zint-typst-plugin/vendor/wasm-minimal-protocol/crates/wasi-stub",
    "xtask"
]
default-members = [
    "zint-wasm-sys",
    "zint-wasm-rs",
    "zint-typst-plugin",
]

[workspace.dependencies]
walkdir = "2"
