[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# should be as minimal as possible with as few transient dependencies as
# possible, prefer using system tools instead

xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = { workspace = true }
