[package]
name = "zint-typst-plugin"
version = "0.2.1"
license = "MIT"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
zint-wasm-rs = { path = "../zint-wasm-rs", features = ["typst"] }

serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.15"
ciborium = "0.2.1"

thiserror = "1.0"

wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
