[package]
name = "zint-wasm-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
zint-wasm-sys = { path = "../zint-wasm-sys" }
serde = { version = "1", features = ["derive"] }
