[package]
name = "zint-wasm-rs"
version = "0.1.0"
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
zint-wasm-sys = { path = "../zint-wasm-sys" }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
