[package]
name = "zint-wasm-rs"
version = "0.2.1"
license = "MIT"
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
typst = []

[dependencies]
zint-wasm-sys = { path = "../zint-wasm-sys" }

serde = { version = "1", features = ["derive"] }
hex = "0.4"

bitflags = { version = "2.4", features = ["serde"] }
thiserror = "1.0"
